--- a/app/views/settings/_settings_nav.html.erb
+++ b/app/views/settings/_settings_nav.html.erb
@@ -30,8 +30,7 @@ nav_sections = [
         { label: t(".api_keys_label"), path: settings_api_key_path, icon: "key" },
         { label: t(".self_hosting_label"), path: settings_hosting_path, icon: "database", if: self_hosted? },
         { label: "Providers", path: settings_providers_path, icon: "plug" },
-        { label: t(".imports_label"), path: imports_path, icon: "download" },
-        { label: "SimpleFin", path: simplefin_items_path, icon: "building-2" }
+        { label: t(".imports_label"), path: imports_path, icon: "download" }
       ]
     } : nil
   ),
