--- a/app/views/settings/providers/show.html.erb
+++ b/app/views/settings/providers/show.html.erb
@@ -8,8 +8,23 @@
   </div>
 
   <% @provider_configurations.each do |config| %>
+    <% next if config.provider_key.to_s.casecmp("simplefin").zero? %>
     <%= settings_section title: config.provider_key.titleize do %>
       <%= render "settings/providers/provider_form", configuration: config %>
     <% end %>
+  <% end %>
+
+  <%= settings_section title: "Simplefin" do %>
+    <turbo-frame id="simplefin-providers-panel">
+      <%= render "settings/providers/simplefin_panel" %>
+    </turbo-frame>
+  <% end %>
+
+  <%# Auto-open the SimpleFin relink modal after creation when requested %>
+  <% if params[:open_relink_for].present? %>
+    <div
+      data-controller="auto-relink"
+      data-auto-relink-url-value="<%= relink_simplefin_item_path(params[:open_relink_for]) %>"
+    ></div>
   <% end %>
 </div>
