--- a/app/views/pwa/manifest.json.erb
+++ b/app/views/pwa/manifest.json.erb
@@ -19,6 +19,6 @@
   "display_override": ["fullscreen", "minimal-ui"],
   "scope": "/",
   "description": "<%= j product_name %> is your personal finance assistant.",
-  "theme_color": "#F9F9F9",
-  "background_color": "#F9F9F9"
+  "theme_color": "#0B0B0B",
+  "background_color": "#0B0B0B"
 }
