fixed broken links

--- a/app/views/simplefin_items/setup_accounts.html.erb
+++ b/app/views/simplefin_items/setup_accounts.html.erb
@@ -109,7 +109,7 @@
         <%= render DS::Link.new(
           text: "Cancel",
           variant: "secondary",
-          href: simplefin_items_path
+          href: accounts_path
         ) %>
       </div>
     <% end %>
