--- a/app/views/accounts/new/_method_selector.html.erb
+++ b/app/views/accounts/new/_method_selector.html.erb
@@ -2,7 +2,13 @@
 
 <%= render layout: "accounts/new/container", locals: { title: t(".title"), back_path: new_account_path } do %>
   <div class="text-sm"
-       <%= "data-controller=lunchflow-preload data-lunchflow-preload-accountable-type-value=#{accountable_type} #{"data-lunchflow-preload-return-to-value=#{params[:return_to]}" if params[:return_to]}" if show_lunchflow_link %>>
+       <% if show_lunchflow_link %>
+         data-controller="lunchflow-preload"
+         data-lunchflow-preload-accountable-type-value="<%= h(accountable_type) %>"
+         <% if params[:return_to] %>
+           data-lunchflow-preload-return-to-value="<%= h(params[:return_to]) %>"
+         <% end %>
+       <% end %>>
     <%= link_to path, class: "flex items-center gap-4 w-full text-center text-primary focus:outline-hidden focus:bg-surface border border-transparent focus:border focus:border-gray-200 px-2 hover:bg-surface rounded-lg p-2" do %>
       <span class="flex w-8 h-8 shrink-0 grow-0 items-center justify-center rounded-lg bg-alpha-black-50 shadow-[inset_0_0_0_1px_rgba(0,0,0,0.02)]">
         <%= icon("keyboard") %>
