--- a/app/views/accounts/new.html.erb
+++ b/app/views/accounts/new.html.erb
@@ -1,5 +1,8 @@
 <%= render layout: "accounts/new/container", locals: { title: t(".title") } do %>
-  <div class="text-sm">
+  <div class="text-sm"
+       <% if @show_lunchflow_link %>
+         data-controller="lunchflow-preload"
+       <% end %>>
     <% unless params[:classification] == "liability" %>
       <%= render "account_type", accountable: Depository.new %>
       <%= render "account_type", accountable: Investment.new %>
