FIX properly handle textarea override

--- a/app/assets/tailwind/maybe-design-system.css
+++ b/app/assets/tailwind/maybe-design-system.css
@@ -366,6 +366,11 @@
       }
     }
   }
+
+  textarea.form-field__input {
+    @apply whitespace-normal overflow-auto;
+    text-overflow: clip;
+  }
   
   select.form-field__input {
     @apply pr-10 appearance-none;
