--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -33,12 +33,19 @@
           <%= icon("pencil-line", size: "sm") %>
         <% end %>
 
-        <% if !account.account_providers.exists? && (account.accountable_type == "Depository" || account.accountable_type == "CreditCard") %>
-          <%= link_to select_existing_account_lunchflow_items_path(account_id: account.id, return_to: return_to),
+        <% if !account.linked? && (account.accountable_type == "Depository" || account.accountable_type == "CreditCard") %>
+          <%= link_to select_provider_account_path(account),
                       data: { turbo_frame: :modal },
                       class: "group-hover/account:flex hidden hover:opacity-80 items-center justify-center gap-1",
-                      title: t("accounts.account.link_lunchflow") do %>
+                      title: t("accounts.account.link_provider") do %>
             <%= icon("link", size: "sm") %>
+          <% end %>
+        <% elsif account.linked? %>
+          <%= link_to confirm_unlink_account_path(account),
+                      data: { turbo_frame: :modal },
+                      class: "group-hover/account:flex hidden hover:opacity-80 items-center justify-center gap-1",
+                      title: t("accounts.account.unlink_provider") do %>
+            <%= icon("unlink", size: "sm") %>
           <% end %>
         <% end %>
       <% end %>
