Fix title overflow issue in chats (#331)
* fix: Truncate title in chats view if too long

* Add hover

---------

Co-authored-by: Juan José Mata <juanjo.mata@gmail.com>

--- a/app/views/chats/_chat.html.erb
+++ b/app/views/chats/_chat.html.erb
@@ -1,8 +1,8 @@
 <%# locals: (chat:) %>
 
 <%= tag.div class: "flex items-center justify-between px-4 py-3 bg-container shadow-border-xs rounded-lg" do %>
-  <div class="grow">
-    <%= turbo_frame_tag dom_id(chat, :title) do %>
+  <div class="grow truncate">
+    <%= turbo_frame_tag dom_id(chat, :title), title: chat.title do %>
       <%= render "chats/chat_title", chat: chat, ctx: "list" %>
     <% end %>
 
