feat: add number of categories and translations

--- a/app/views/pages/dashboard/_outflows_donut.html.erb
+++ b/app/views/pages/dashboard/_outflows_donut.html.erb
@@ -61,13 +61,15 @@
       <!-- Category List -->
       <div class="w-full lg:w-2/3 bg-container-inset rounded-xl p-1 space-y-1 overflow-x-auto">
         <div class="px-4 py-2 flex items-center uppercase text-xs font-medium text-secondary">
-          <div class="w-40">Name</div>
+          <div class="w-40">
+            <p><%= t("pages.dashboard.outflows_donut.categories") %><span class="text-subdued mx-1">&middot;</span><%= outflows_data[:categories].count %></p>
+          </div>
           <div class="ml-auto text-right flex items-center gap-6">
             <div class="w-40">
-              <p><%= t("value") %></p>
+              <p><%= t("pages.dashboard.outflows_donut.value") %></p>
             </div>
-            <div class="w-20">
-              <p><%= t("weight") %></p>
+            <div class="w-16">
+              <p><%= t("pages.dashboard.outflows_donut.weight") %></p>
             </div>
           </div>
         </div>
